<resources>
    <string name="app_name">E-MODUL BOGA DASAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Media Pembelajaran</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_materi">Materi</string>
    <string name="menu_slideshow">Video</string>
    <string name="menu_petunjuk">Petunjuk</string>
    <string name="menu_pendahuluan">Pendahuluan</string>
    <string name="menu_kikd">KI &amp; KD</string>
    <string name="menu_daftar_pustaka">Daftar Pustaka</string>
    <string name="menu_profile">Profile</string>

</resources>