<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_petunjuk"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_petunjuk" />
        <item
            android:id="@+id/nav_pendahuluan"
            android:icon="@drawable/ic_quote"
            android:title="@string/menu_pendahuluan" />
        <item
            android:id="@+id/nav_kikd"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_kikd" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_materi" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/menu_quiz" />
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav__pustaka"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_daftar_pustaka" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
    </group>
</menu>